# PathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  PathConfig.inl.in  README.md
assets/: Suzanne.glb
shaders/: closesthit.rchit  miss.rmiss  post.frag  post.vert  raygen.rgen  triangle.frag  triangle.rchit  triangle.rgen  triangle.rmiss  triangle.vert
src/: Main.cpp  PCH.hpp  Types.hpp  pch.hpp
src/Core/: Application.cpp  Application.hpp  Events.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Logger.cpp  Logger.hpp  Timer.hpp  Window.cpp  Window.hpp
src/Platform/VMA/: VMAImpl.cpp
src/RHI/: AccelerationStructure.cpp  AccelerationStructure.hpp  Buffer.cpp  Buffer.hpp  CommandContext.hpp  CommandManager.hpp  DescriptorManager.cpp  DescriptorManager.hpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  VkTypes.hpp  VulkanAccelerationStructure.cpp  VulkanAccelerationStructure.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommand.cpp  VulkanCommand.hpp  VulkanCommandManager.cpp  VulkanCommandManager.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.hpp  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.hpp  VulkanDescriptorWriter.cpp  (+16 more)
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Scene/: AssetManager.cpp  AssetManager.hpp  Camera.cpp  Camera.hpp  CameraRig.hpp  CameraSystem.cpp  CameraSystem.hpp  Mesh.hpp  Model.cpp  Model.hpp  SceneData.hpp  SceneLoader.cpp  SceneLoader.hpp  Texture.cpp  Texture.hpp
src/Scene/Rigs/: FreeFlyRig.cpp  FreeFlyRig.hpp
